[package]
name = "demo-ios"
version = "0.1.0"
authors = ["Sebastian Imlay <sebastian.imlay@gmail.com>"]
edition = '2018'

[lib]
name = "demo_ios"
crate-type = ["staticlib"]

[dependencies]
raw-window-handle = "0.3.1"
takeable-option = "0.4"
glutin = "*"


[build-dependencies]
gl_generator = "0.13.0"
